Actualizacion CodeQL tests

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -51,8 +51,11 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
+    - name: Build Java code
+      id: build_java_code
       uses: github/codeql-action/autobuild@v1
+      run: |
+        - mvn clean test
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -66,4 +69,5 @@ jobs:
     #   make release
 
     - name: Perform CodeQL Analysis
+      id: analyze_codeql
       uses: github/codeql-action/analyze@v1
